# pinklab_minibot_robot

./: .gitignore  README.md
docs/: minibot_inertia.ods
docs/blender/: URG-04LX-UG01.blend  URG-04LX-UG01.blend1  base_link.blend  base_link.blend1  front_camera.blend  front_camera.blend1  wheel.blend  wheel.blend1
minibot_bringup/: CMakeLists.txt  README.md  package.xml
minibot_bringup/config/: minibot_controllers.yaml  minibot_controllers_gazebo.yaml  ydlidar.yaml
minibot_bringup/launch/: bringup_robot.launch.py  bringup_robot_gazebo.launch.py
minibot_bringup/rviz/: robot.rviz
minibot_bringup/scripts/: 99-minibot-devices.rules
minibot_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
minibot_controllers/include/minibot_gpio_controller/: gpio_controller.hpp
minibot_controllers/src/: gpio_controller.cpp
minibot_description/: CMakeLists.txt  README.md  package.xml
minibot_description/launch/: upload_robot.launch.py  view_robot.launch.py
minibot_description/meshes/collision/: URG-04LX-UG01.stl  base_link.stl  front_camera.stl  ul_sensor.stl  wheel.stl  ydlidar_x2_assy.stl
minibot_description/meshes/visual/: URG-04LX-UG01.dae  front_camera.dae  ul_sensor.dae  wheel.dae
minibot_description/rviz/: view_robot.rviz
minibot_description/urdf/: minibot.urdf.xacro  minibot_gazebo.urdf.xacro  minibot_ros2_control.urdf.xacro  robot.urdf.xacro
minibot_description/urdf/common/: inertia_macro.urdf.xacro
minibot_gazebo/: CMakeLists.txt  README.md  package.xml
minibot_gazebo/launch/: bringup_gazebo.launch.py
minibot_gazebo/models/simple_building/: model.config  model.sdf
minibot_gazebo/worlds/: simple_building.world
minibot_hardware_interface/: CMakeLists.txt  minibot_hardware.xml  package.xml
minibot_hardware_interface/include/minibot_hardware_interface/: minibot_system.hpp
minibot_hardware_interface/src/: minibot_system.cpp
minibot_interfaces/: CMakeLists.txt  package.xml
minibot_interfaces/msg/: LampCommand.msg  RobotState.msg
minibot_navigation2/: CMakeLists.txt  README.md  package.xml
minibot_navigation2/config/: mapper_params.yaml
minibot_navigation2/launch/: bringup_launch.py  localization_launch.py  map_building.launch.py  navigation_launch.py
minibot_navigation2/maps/: pinklab_test1.pgm  pinklab_test1.yaml  simple_building.pgm  simple_building.yaml
minibot_navigation2/params/: nav2_params.yaml
minibot_navigation2/rviz/: map_building.rviz  nav2_view.rviz
