<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minibot_controllers</name>
  <version>0.0.0</version>
  <description>minibot_controllers</description>
  <maintainer email="byeongkyu@gmail.com">byeongkyu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>minibot_interfaces</depend>
  <depend>controller_interface</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcutils</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
